--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/andrewjsanjaya/meme8#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
+    "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
     "sequelize": "^6.17.0"
   },
